<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_ControllerBrightness" Id="{604af7c6-46fd-4031-b39f-42d0051195f9}">
    <Declaration><![CDATA[{attribute 'qualified_only' := ''}
{attribute 'strict' := ''}
TYPE E_ControllerBrightness :
(
	High := 0,
	Med := 1,
	Low := 2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>