<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_ControllerPlayerID" Id="{d98d4d74-0af2-4200-b2d2-a2e62489282e}">
    <Declaration><![CDATA[{attribute 'qualified_only' := ''}
{attribute 'strict' := ''}
TYPE E_ControllerPlayerID :
(
	Player1 := 4,
	Player2 := 10,
	Player3 := 21,
	Player4 := 27,
	PlayerAll := 31
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>