<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_ControllerTriggerForceParameter" Id="{54b4a266-7c75-4f63-967a-c2dc24d3f5bb}">
    <Declaration><![CDATA[{attribute 'qualified_only' := ''}
{attribute 'strict' := ''}
TYPE E_ControllerTriggerForceParameter :
(
	One := 0,
	Two := 1,
	Three := 2,
	Four := 3,
	Five := 4,
	Six := 5,
	Seven := 6
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>