<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="E_ControllerTriggerMode" Id="{7cfb17e9-0adb-430c-99c4-e3a0b9b689dc}">
    <Declaration><![CDATA[{attribute 'qualified_only' := ''}
{attribute 'strict' := ''}
TYPE E_ControllerTriggerMode :
(
	/// no resistance
	Off := 0,
	/// continous resistance
	Rigid := 1,
	/// section resistance
	Pulse := 2,
	Rigid_A := 3,
	Rigid_B := 4,
	Rigid_AB := 5,
	Pulse_A := 6,
	Pulse_AB := 7,
	Calibration := 8
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>